tests/negative/typecheck/union.orng
fn main() -> Int {(x | y) || (z | a)}